# rpg-combat-simulator

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml  run.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.requirements/: Combat Simulator.md  LLM System Prompt for Monster Agent.md  Notes.md  Recommended Project Structure.md
data/creatures/: eckardius.md  fighter.md  goblin.md  lotus.md  paladin-dragonborn.md  prescold.md  skazzo.md  wizard.md
data/srd-cache/: adult-black-dragon.md  bear.md  berserker.md  chimera.md  doppelganger.md  giant-spider.md  orc.md  spider.md  werewolf-wolf.md  wolf.md  wolf1.md  wolf2.md  wolf3.md  wolf4.md
data/terrain/: arena.md
src/agents/: __init__.py  base.py  heuristic.py  llm_agent.py  llm_parser.py  llm_prompt.py  llm_providers.py  llm_validator.py
src/analysis/: __init__.py  difficulty.py  statistics.py
src/cli/: __init__.py  batch_args.py
src/domain/: __init__.py  combat_state.py  cover.py  creature.py  dice.py  distance.py  rules.py  srd_models.py  terrain.py
src/io/: creature_loader.py  logger.py  markdown.py  parser.py  srd_api.py  terrain_loader.py
src/output/: __init__.py  report_generator.py
src/simulation/: __init__.py  victory.py  (+3 more)
tests/: test_combat_state.py  test_cover.py  test_creature.py  test_dice.py  test_distance.py  test_heuristic.py  test_llm_parser.py  test_llm_validator.py  test_markdown.py  test_rules.py  test_rules_basic.py  test_simulator.py  test_terrain.py
(+59 files in other folders)
